<resources>
    <string name="app_name">Food Scout</string>
    <string name="author_name">Giuseppe Buccellato, Eric Walter</string>

    <string name="default_amount">0</string>

    <!-- recipe list -->
    <string name="recipe_placeholder">Recipe Name</string>
    <string name="recipe_desc_placeholder">Recipe Description</string>
    <string name="searchView_placeholder">"Search..."</string>
    <string name="recipe_recyclerView_title">Available recipes</string>
    <string name="picker_recyclerView_title">Ingredient</string>
    <string name="picker_num_available_title">Available</string>
    <string name="picker_type_title">Type</string>
    <string name="favourite_recyclerView_title">Your favourites</string>

    <!-- NavBar -->
    <string name="title_home">Home</string>
    <string name="title_search">Picker</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_picker">Ingredient Picker</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="search_bar_title">Search</string>

    <!-- Recipe Detail -->
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="description_recipe_detail">Recipe Description</string>
    <string name="title_recipe_instructions">"How it's made:"</string>
    <string name="instructions_recipe_detail">Recipe Instructions</string>
    <string name="title_recipe_ingredients">"What you'll need:"</string>
    <string name="ingredient_placeholder">Ingredient Name</string>
    <string name="ingredient_unit_placeholder">units</string>

    <!-- Ingredient Detail -->
    <string name="title_ingredient_detail">Ingredient Detail</string>
    <string name="title_associated_recipes">Recipes containing this:</string>
    <string name="title_num_available">"You've got"</string>
    <string name="title_num_associated">No. of recipes with this</string>
    <string name="addToShoppingList">Add to shopping list</string>
    <string name="addToAvailable">Add as owned</string>
    <string name="ingredient_category_title">Category</string>

    <!-- Shopping Lists -->
    <string name="shoppinglist_overview_title">Your shopping lists</string>
    <string name="shoppinglist_name_placeholder">Shopping list</string>
    <string name="shopping_progress_placeholder">0 / 0</string>
    <string name="addShoppingList">Add Shopping List</string>
    <string name="shopping_num_to_buy_title">Amount</string>
    <string name="addIngredientToShoppingList">Add To Shopping List</string>
    <string name="amountToAdd">Amount</string>

    <string name="ifListEmptyNotifierText">No items here yet. Add an ingredient with the button down below!</string>
    <string name="initUserInfo">Please wait while we get things ready for you...</string>
    <string name="logosplashscreen">logoSplashscreen</string>

</resources>