<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="6dp"
    android:background="#fff"
    android:id="@+id/parentLayout"
    android:visibility="visible">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ingredientImageId"
        android:src="@mipmap/ic_launcher"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientNameId"
        android:text="@string/ingredient_placeholder"
        android:layout_toEndOf="@id/ingredientImageId"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:ellipsize="end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientAmountId"
        android:layout_toStartOf="@id/ingredientUnitId"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:textSize="18sp"
        android:text="@string/default_amount"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientUnitId"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:text="@string/ingredient_unit_placeholder"
        />

</RelativeLayout>