<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextBox"
            android:inputType="text"
            android:hint="@string/ingredient_placeholder"
            android:completionThreshold="1"
            android:layout_margin="10dp"
            android:textSize="22sp"
            />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amountToAdd"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:textSize="22sp"
                />
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/amountTextBox"
                android:inputType="number"
                android:hint="@string/default_amount"
                android:textAlignment="viewEnd"
                android:layout_margin="10dp"
                android:textSize="22sp"
                android:autofillHints="" />

        </TableRow>


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>