<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/holo_purple">

    <TextView
        android:id="@+id/favouriteTitleId"
        android:text="@string/title_favorites"
        style="@style/FragmentTitleText"
        />

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextView"
        android:layout_below="@+id/favouriteTitleId"
        android:hint="@string/searchView_placeholder"
        android:completionHint="@string/searchView_placeholder"
        android:completionThreshold="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <!-- Scrolling list -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RecipeDetailScrollViewId"
        android:layout_below="@+id/autoCompleteTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/recyclerViewTitleStyle"
                android:id="@+id/FavouriteRecyclerViewTitle"
                android:text="@string/favourite_recyclerView_title"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/favouriteRecyclerView"
                tools:listitem="@layout/layout_recipe_listitem"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>