<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAppLogo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shoppingListFragmentTitle"
        android:text="@string/title_shopping_list"
        style="@style/FragmentTitleText"
        />

    <!-- Scrolling list -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shoppingListFragmentScrollView"
        android:layout_below="@+id/shoppingListFragmentTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/recyclerViewTitleStyle"
                android:id="@+id/shoppingFragmentRecyclerViewTitle"
                android:text="@string/shoppinglist_overview_title"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/shoppingListOverviewRecyclerView"
                tools:listitem="@layout/layout_shopping_listitem"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoppingFragmentFab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_fab_add"
        android:contentDescription="@string/addShoppingList"
        />

</RelativeLayout>